feat: add the auth page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dekamond-sample-auth-system",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "author": {
     "name": "Bardia Rasouli",
@@ -13,9 +13,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
