--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dekamond-sample-auth-system",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "author": {
     "name": "Bardia Rasouli",
@@ -18,6 +18,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
